# oscillator4control

./: .gitignore  README.md  convex_mpc.py  main.py  mpc.ipynb  pyproject.toml  requirements.txt  two_mass_oscillator.ipynb  two_mass_oscillator.py  two_mass_oscillator_hist.pkl  two_mass_oscillator_model.eqx
src/oscillator4control/: __init__.py
