[project]
name = "oscillator4control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynax",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
]

[tool.uv.sources]
dynax = { git = "https://github.com/Drenderer/dynax", rev = "537b321c10c30a0322fdafeb6c6c1119121dfe6b" }
