[project]
name = "oscillator4control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynax",
    "ipywidgets>=8.1.7",
    "jaxopt>=0.8.5",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
dynax = { git = "https://github.com/Drenderer/dynax", rev = "537b321c10c30a0322fdafeb6c6c1119121dfe6b" }
